Support installing extensions

--- a/src/code-server/devcontainer-feature.json
+++ b/src/code-server/devcontainer-feature.json
@@ -15,6 +15,10 @@
         "args": {
             "type": "string",
             "default": ""
+        },
+        "extensions": {
+            "type": "string",
+            "default": ""
         }
     },
     "entrypoint": "/usr/local/bin/code-server-entrypoint",
