feat: allow modifying auth mode
Adds an auth option to code-server feature to allow modifying the auto
mode of code-server.

--- a/src/code-server/devcontainer-feature.json
+++ b/src/code-server/devcontainer-feature.json
@@ -27,7 +27,12 @@
         "workspace": {
              "type": "string",
              "default": ""
-         }
+         },
+        "auth": {
+            "type": "string",
+            "enum": ["password", "none"],
+            "default": "password"
+        }
     },
     "entrypoint": "/usr/local/bin/code-server-entrypoint",
     "dependsOn": {
