chore: remove args and explicitly add feature

--- a/src/code-server/devcontainer-feature.json
+++ b/src/code-server/devcontainer-feature.json
@@ -23,7 +23,11 @@
         "extensions": {
             "type": "string",
             "default": ""
-        }
+        },
+        "workspace": {
+             "type": "string",
+             "default": ""
+         }
     },
     "entrypoint": "/usr/local/bin/code-server-entrypoint",
     "dependsOn": {
