--- a/src/code-server/devcontainer-feature.json
+++ b/src/code-server/devcontainer-feature.json
@@ -10,6 +10,21 @@
             "default": "password",
             "description": "The type of authentication to use. When 'password' is selected, code-server will auto-generate a password. 'none' disables authentication entirely."
         },
+        "cert": {
+            "type": "string",
+            "default": "",
+            "description": "Path to certificate. A self signed certificate is generated if none is provided."
+        },
+        "certHost": {
+            "type": "string",
+            "default": "",
+            "description": "hostname to use when generating a self signed certificate."
+        },
+        "certKey": {
+            "type": "string",
+            "default": "",
+            "description": "path to certificate key when using non-generated cert."
+        },
         "disableFileDownloads": {
             "type": "boolean",
             "default": false,
