chore: install devcontainer cli for action

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: "Install latest devcontainer CLI"
+        run: npm install -g @devcontainers/cli
+
       - name: "Generate documentation"
         run: make -B docs
 
