--- a/src/code-server/devcontainer-feature.json
+++ b/src/code-server/devcontainer-feature.json
@@ -75,6 +75,16 @@
             "default": "8080",
             "description": "The port to bind to for the code-server."
         },
+        "socket": {
+            "type": "string",
+            "default": "",
+            "description": "Path to a socket. When specified, host and port will be ignored."
+        },
+        "socketMode": {
+            "type": "string",
+            "default": "",
+            "description": "File mode of the socket when using the socket option."
+        },
         "version": {
             "type": "string",
             "default": "",
