--- a/src/code-server/devcontainer-feature.json
+++ b/src/code-server/devcontainer-feature.json
@@ -100,6 +100,11 @@
             "default": "",
             "description": "File mode of the socket when using the socket option."
         },
+        "trustedOrigins": {
+            "type": "string",
+            "default": "",
+            "description": "Comma-separated list of trusted-origins to disable origin check for. Useful if not able to access reverse proxy configuration."
+        },
         "verbose": {
             "type": "boolean",
             "default": false,
